# LHCbLumi

./: .gitignore  CMakeLists.txt  LHCbLumi.cc  PythiaSettings.cmnd  gui.mac  run.sh  vis.mac  vis_file.mac
LHCbLumi-pmt_windows/: vis.mac  vis_file.mac
LHCbLumi-pmt_windows/include/: LConst.hh  L_DetectorConstruction.h  L_PrimaryGeneratorAction.h
LHCbLumi-pmt_windows/src/: L_DetectorConstruction.cpp  L_SensitiveDetector.cpp
LHCbLumi-single_window/include/: LConst.hh  L_DetectorConstruction.h  L_EventAction.h
LHCbLumi-single_window/src/: L_DetectorConstruction.cpp  L_PrimaryGeneratorAction.cpp
Pythia/: Makefile  main.cc  main.cmnd
analysis/: 1ana.cc  Makefile  ana.cc  ana2MT.cc  distribana.py  draw.py  draw_phot_coal.py  group.cc  groupMT.cc  groupMTopt.cc  hana.cc  histana.cc  histo.h  lhcbStyle.C  log.txt  mergeMT.cc  nphot_tablet_tdr.py  numOfLight.cc  pmt_ana.c  pmt_ana.ipynb  reco.cc  run.bash  runMT.screen.sh  runMT.sh  sec_ana.c  spectra.cc  stabana.cc  stability.sh  timelog.txt  user.properties
analysis/angleAna/: ana.cc
analysis/sec_ana/: groupMT.cc  sec_ana.cc
include/: EventDataStructure.hh  HitDataStructure.hh  LConst.hh  L_DetectorConstruction.h  L_EventAction.h  L_PhysicsList.h  L_PrimaryGeneratorAction.h  L_RunAction.h  L_SensitiveDetector.h  L_SteppingAction.h  L_VolumeStructures.h  MCTruthConfig.hh  MCTruthEventAction.hh  MCTruthManager.hh  MCTruthTrackInformation.hh  MCTruthTrackingAction.hh
src/: L_DetectorConstruction.cpp  L_EventAction.cpp  L_Hit.cpp  L_PhysicsList.cpp  L_PrimaryGeneratorAction.cpp  L_RunAction.cpp  L_SensitiveDetector.cpp  L_SteppingAction.cpp  MCTruthTrackingAction.cc
